[tool.poetry]
name = "pokb-metrics-collector"
version = "0.1.0"
description = ""
authors = ["DragonSigh <dragonsigh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.12.0"
loguru = "^0.7.2"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
gspread = "^5.11.2"
oauth2client = "^4.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = {version = "^23.9.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
